# muuk

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  BUILDING.md  LICENSE  README.md  build.ninja  debug.ninja  linux.build.ninja  meson.build  muuk.lock.toml  muuk.toml  release.ninja  snapcraft.yaml  windows.build.ninja
.github/workflows/: build.yaml  build2.yaml  build_win.yaml  lint.yaml
include/: base_config.hpp  buildbackend.hpp  buildconfig.h  buildmanager.h  buildmanager.hpp  buildparser.hpp  buildtargets.h  buildtargets.hpp  compcmdgen.hpp  compiler.hpp  error_codes.hpp  fileops.hpp  flags.h  flags.hpp  ifileops.hpp  int_term.hpp  license.h  logger.h  logger.hpp  makebackend.hpp  moduleresolver.hpp  muuk.h  muuk.hpp  muuk_parser.hpp  muuk_schema.hpp  muuk_toml_handler.hpp  muukbuilder.h  muuker.hpp  muukfiler.h  muuklockgen.h  muuklockgen.hpp  muukmoduleparser.hpp  muukterminal.hpp  muukvalidator.hpp  ninjabackend.hpp  ninjagen.h  opt_level.hpp  package_manager.h  rustify.hpp  toml_ext.hpp  (+6 more)
include/commands/: add.hpp  build.hpp  clean.hpp  init.hpp  install.hpp  remove.hpp  run.hpp
include/lockgen/: muuklockgen.hpp
include/lockgen/config/: base.hpp  build.hpp  library.hpp  package.hpp
modules/: math.ixx
muuk-patches/: gabime-spdlog-v1.15.1.toml  glob.toml  google-googletest-v1.15.2.toml  kuba---zip-v0.3.3.toml  nlohmann-json-v3.11.3.toml  p-ranav-argparse-v3.2.toml  uploaded_patches.txt
nsis/: installer.nsi
prototyping/: README.md  compilecommands2makefile.py  muuklockgen.py  ninjagen.py
prototyping/modules/: generate_test_files.py  resolve_module_dep.py
release-windows/: muuk.toml
scripts/: packager.py  ren.bat
src/: compiler.cpp  flags.cpp  installer.cpp  logger.cpp  main.cpp  muuk.cpp  muuk_parser.cpp  muuk_toml_handler.cpp  muukbuilder.cpp  muuker.cpp  muukfiler.cpp  muukinitializer.cpp  muuklockgen.cpp  muukterminal.cpp  muukvalidator.cpp  ninjagen.cpp  package_manager.cpp  quickinitializer.cpp  test.cpp  util.cpp
src/builder/: buildmanager.cpp  buildparser.cpp  buildtargets.cpp  compdbbackend.cpp  makebackend.cpp  moduleresolver.cpp  ninjabackend.cpp
src/lockgen/: base_config.cpp  muuklockgen.cpp  package.cpp  parsing.cpp  resolution_tree.cpp  settings.cpp  util.cpp
src/package_manager/: add.cpp  installer.cpp  remove.cpp
src/packagemanager/: installer.cpp  package_manager.cpp  remove.cpp
src/util/: git_util.cpp  util.cpp
src/validation/: dependencies.cpp  flag.cpp  muuk.cpp  muukfile.cpp  validate_muuk.cpp
test/: README.md  muuk.toml
test/cmake/: CMakeLists.txt
test/internal/: mockmuukfiler.cpp  muuk_test.cpp  muuk_test.hpp  test_build_manager.hpp  test_buildparser.hpp  test_module_parser.hpp  test_module_resolver.hpp  test_muukfiler.hpp  test_muukvalidator.hpp  test_toml_handler.hpp  test_util.cpp  test_util.hpp  util_test.hpp
test/internal/mocks/: MockFileOperations.hpp  mockfileop.hpp
test/internal/zipcracker/: test 2char pw 0J.rar
test/meson/: meson.build
test/modules/: main.cpp  muuk.lock.toml
test/modules/modules/: module_math.ixx  module_utils.ixx
tests/internal/: mockmuukfiler.cpp  muuk_test.cpp  muuk_test.hpp  util_test.hpp
tests/modules/: main.cpp  muuk.toml
